# energy-forecast

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
experiments/: monthly_forecast.py  week1_baselines.py  week1_rolling_backtest.py
scripts/: ha_tibber_ingest.sh
src/energy_forecast/cli/: junior_dev.py
src/energy_forecast/data/: tibber_source.py
src/energy_forecast/evaluation/: cross_validation.py  metrics.py
src/energy_forecast/models/: baselines.py  monthly_baselines.py
src/energy_forecast/pipeline/: ingest_tibber.py
tests/: conftest.py  test_tibber_data_quality.py
